# langrove

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: scheduled-tasks.md  settings.json
.claude/agents/: architect.md  implementer.md  reviewer.md
.claude/journals/: README.md  implementer.md  planner.md  reviewer.md
.claude/rules/: api-design.md  architecture.md  auth.md  database.md  pipeline.md  streaming.md  testing.md  worker-tasks.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/scripts/: setup-labels.sh
.github/workflows/: auto-merge.yml  ci.yml  claude-backlog.yml  claude-backlog.yml.disabled  claude-implement.yml  claude-maintenance.yml  claude-maintenance.yml.disabled  claude-planner.yml  claude-planner.yml.disabled  claude-review.yml  claude.yml  claude.yml.disabled  publish.yml
examples/: README.md
examples/custom-auth/: README.md  agent.py  auth.py  auth_private.py  client.py  langgraph.json
examples/helios-video-agent/: .env.example  AGENTS.md  README.md  agent.py  client.py  helios_tools.py  langgraph.json  pyproject.toml
examples/helios-video-agent/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/helios-video-agent/frontend/src/: App.tsx  main.tsx
examples/helios-video-agent/frontend/src/components/: ChatPanel.tsx  PreviewPanel.tsx  ReviewBar.tsx  ToolProgress.tsx
examples/helios-video-agent/frontend/src/hooks/: useVideoAgent.ts
examples/helios-video-agent/frontend/src/lib/: store.ts
examples/helios-video-agent/skills/helios-skills/core/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/canvas/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/chartjs/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/d3/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/framer-motion/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/gsap/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/lottie/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/p5/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/pixi/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/podcast-visualizer/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/react/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/signals/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/solid/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/svelte/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/tailwind/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/threejs/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/vanilla/: SKILL.md
examples/helios-video-agent/skills/helios-skills/examples/vue/: SKILL.md
examples/helios-video-agent/skills/helios-skills/getting-started/: SKILL.md
examples/helios-video-agent/skills/helios-skills/guided/explainer-video/: SKILL.md
examples/helios-video-agent/skills/helios-skills/guided/launch-announcement/: SKILL.md
examples/helios-video-agent/skills/helios-skills/guided/motion-design-rules/: SKILL.md
examples/helios-video-agent/skills/helios-skills/guided/product-demo/: SKILL.md
examples/helios-video-agent/skills/helios-skills/guided/promo-video/: SKILL.md
examples/helios-video-agent/skills/helios-skills/guided/social-clip/: SKILL.md
examples/helios-video-agent/skills/helios-skills/guided/testimonial-video/: SKILL.md
examples/helios-video-agent/skills/helios-skills/player/: SKILL.md
examples/helios-video-agent/skills/helios-skills/renderer/: SKILL.md
examples/helios-video-agent/skills/helios-skills/studio/: SKILL.md
examples/helios-video-agent/skills/helios-skills/workflows/create-composition/: SKILL.md
examples/helios-video-agent/skills/helios-skills/workflows/render-video/: SKILL.md
examples/helios-video-agent/skills/helios-skills/workflows/visualize-data/: SKILL.md
examples/multi-agent-store/: .env.example  README.md  client.py  langgraph.json  researcher.py  writer.py
examples/quickstart/: .env.example  README.md  agent.py  client.py  langgraph.json
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_queue.py  test_streaming.py  test_thread_copy.py
(+57 files in other folders)
